force-app/main/default/objects/Project_Task__c/fields/Due_Date_Back_to_Business__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Back_to_Business__c</fullName>
    <label>Due Date/Back to Business</label>
    <type>Date</type>
</CustomField>