force-app/main/default/objects/Project_Task__c/fields/Process_Section_to_be_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Process_Section_to_be_Reviewed__c</fullName>
    <label>Process/Section to be Reviewed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>