force-app/main/default/objects/Project_Task__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <inlineHelpText>Fields copied from Standard Task object</inlineHelpText>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration Details</fullName>
            </value>
            <value>
                <fullName>Document Needs</fullName>
            </value>
            <value>
                <fullName>Project Specs</fullName>
            </value>
            <value>
                <fullName>ITP Preparation</fullName>
            </value>
            <value>
                <fullName>Special Order</fullName>
            </value>
            <value>
                <fullName>Red-ball Order</fullName>
            </value>
            <value>
                <fullName>Credit Check</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>