force-app/main/default/objects/Project_Task__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Fields copied from Standard Task object</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Task</relationshipName>
    <type>Lookup</type>
</CustomField>