force-app/main/default/objects/Project_Task__c/validationRules/Only_Allow_Positive_Revisions.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Allow_Positive_Revisions</fullName>
    <active>true</active>
    <description>Only allow revisions greater than Zero</description>
    <errorConditionFormula>Revision__c &gt; 0</errorConditionFormula>
    <errorDisplayField>Revision__c</errorDisplayField>
    <errorMessage>Revision must be greater than zero to save Task</errorMessage>
</ValidationRule>